[package]
name = "rusted_graw"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bit-set = "0.5.3"
bitvec = "1.0.1"
byteorder = "1.4.3"
fxhash = "0.2.1"
hdf5 = { git = "https://github.com/aldanor/hdf5-rust.git" }
indicatif = "0.17.5"
log = "0.4.19"
ndarray = "0.15.6"
serde = "1.0.166"
serde_derive = "1.0.166"
serde_yaml = "0.9.22"
simplelog = "0.12.1"
